# two-shell

./: Cargo.toml  Makefile  README.adoc  fpc.cfg  ptop.cfg  twosh.1  twosh.adoc
scripts/: install  uninstall
src/: main.rs  twosh.pas
