[package]
name = "two-shell"
version = "0.1.0"
authors = ["Samuel Wilson <samWson@users.noreply.github.com>"]
edition = "2018"
description = "A command line shell made primarily for learning."
readme = "README.adoc"
license = "UNLICENSE"
license-file = "UNLICENSE"
keywords = "shell, learning"
categories = "command-line-utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
